// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbilityToggle matches the snapshot 1`] = `
<div>
  <div
    class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
  >
    <input
      checked=""
      class="custom-control-input my-auto"
      id="testAbility"
      type="checkbox"
    />
    <label
      class="custom-control-label drop-down-label mx-2 my-auto"
      for="testAbility"
    >
      Test
    </label>
  </div>
</div>
`;

exports[`AbilityToggle matches the snapshot when not visible 1`] = `
<div>
  <div
    class="collapse justify-content-center my-3 custom-control custom-switch"
  >
    <input
      checked=""
      class="custom-control-input my-auto"
      id="testAbility"
      type="checkbox"
    />
    <label
      class="custom-control-label drop-down-label mx-2 my-auto"
      for="testAbility"
    >
      Test
    </label>
  </div>
</div>
`;
